ACM_General/home/static/home/scss/main.scss
/* ... */
.acm-btn {
  display: inline-block;
  cursor: pointer;
  background: #76d3ab;
  white-space: nowrap;
 color: white;
  text-align: center;
  height: 38px;
  line-height: 38px;
  padding: 0 20px;
  text-decoration: none;
  
  box-shadow: inset 0 -4px 0 0 #65b593;
  
  transition: .2s ease-in-out;
}
.acm-btn:hover {
  box-shadow: inset 0 -40px 0 0 #65b593;
}

/* =========================================================================
 * Footer Styles
 * ========================================================================= */

footer {
  position: relative;
  z-index: 10;
  height: 220px;
  -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    display: -ms-flexbox;
display: -webkit-flex;
display: flex;
  -ms-flex-align: center;
  align-items: center;
  background-color: #373C3F;
}

footer img {
  margin: 5px 0;
  max-height: 100px;
  height: auto;
  width: auto;
}

.footer-nav {
  height: 60px;
  width: 100%;
  white-space: nowrap;
  display: -ms-flexbox;
display: -webkit-flex;
display: flex;
  -ms-flex-align: center;
  -ms-flex-pack: center;
  justify-content: center;
  align-items: center;
}

.footer-nav a {
  margin: 0 2%;
  font-size: 14px;
  text-decoration: none;
  color: rgba(255,255,255,.8);
  transition: color .25s;
}
.footer-nav a:hover {
  color: rgba(255,255,255,1);
}

footer h5 {
  color: rgba(255,255,255,.6);
  font-size: 14px;
  font-weight: normal;
}

/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden {
  display: none !important;
}

/*
 * Hide only visually, but have it available for screen readers:
 * http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 */

.visuallyhidden {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

/*
 * Extends the .visuallyhidden class to allow the element
 * to be focusable when navigated to via the keyboard:
 * https://www.drupal.org/node/897638
 */

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
  clip: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  position: static;
  width: auto;
}

/*
 * Hide visually and from screen readers, but maintain layout
 */

.invisible {
  visibility: hidden;
}

/*
 * Set content to middle of screen and desired width for content
 */

.constraint-wrapper {
  margin: 0 auto;
  width: 100%;
  max-width: 1200px;
}

.content-wrapper {
  margin: 0 auto;
  width: 100%;
  max-width: 1000px;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix:before,
.clearfix:after {
  content: " "; /* 1 */
  display: table; /* 2 */
}

.clearfix:after {
  clear: both;
}

/* ==========================================================================
   Media Queries for Responsive Design.
   ========================================================================== */

/*@media (max-width: 320px) {*/
/*!*smartphones, iPhone, portrait 480x320 phones *!*/
/*}*/

@media (max-width: 414px) {
  /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
  footer {
    height: 110px;
    padding-top: 15px;
  }
  
  footer img {
    display: none;
  }
}

@media (max-width: 641px) {
  /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
  header {
    margin-top: 56px;
    padding-bottom: 0;
    height: 250px;
  }
  
  .header-welcome {
    font-size: 28px;
  }
  
  nav {
    display: none;
  }
  
  .pseudo-nav {
    display: none;
  }
  
  #menu-wrapper {
    display: block;
  }
  
  .top-bar {
    top: 0;
    display: block;
  }
  
  main {
    margin-top: 0;
    padding-top: 10px;
  }
  
  main::before {
    display: block !important;
    content: '';
    position: relative;
    top: -12px;
    border-top: solid 4px #2da1d8;
  }
}

/*@media (max-width:961px)  { !* tablet, landscape iPad, low-res laptops ands desktops *! }*/
@media (max-width: 1090px) {
  /* big landscape tablets, laptops, and desktops */
  
  nav .nav-link-wrapper {
    margin: 0;
  }
}
/* ... */

